# haskell-hangman

./: CHANGELOG.md  LICENSE  README.md  haskell-hangman.cabal
app/: Main.hs  Pics.hs
